--- a/16-Industry Use Case-Human Resource-AutoQuestGen/Streamlit/style.css
+++ b/16-Industry Use Case-Human Resource-AutoQuestGen/Streamlit/style.css
@@ -11,8 +11,35 @@
   font-size: 16px;
   margin: 4px 2px;
   cursor: pointer;
-    width: 250px;
+    width: 300px;
     height: 50px;
+}
+
+.css-hi6a2p{
+    padding-bottom: 10px;
+}
+/* sidebar dropdown padding */
+/* .css-z8kais { */
+.css-1l02zno{
+    padding-bottom: 100px;
+}
+.row-widget .stSelectbox{
+    padding-bottom: 100px;
+}
+/* copy selector instead of xpath */
+#root > div:nth-child(1) > div > div > div > div > section.css-1lcbmhc.e1fqkh3o0 > div.css-1l02zno.e1fqkh3o1 > div.block-container.css-1dnb06j.eknhn3m2 > div:nth-child(1) > div:nth-child(3)
+{
+    padding-bottom:50px;
+}
+#root > div:nth-child(1) > div > div > div > div > section.css-1lcbmhc.e1fqkh3o0 > div.css-1l02zno.e1fqkh3o1 > div.block-container.css-1dnb06j.eknhn3m2 > div:nth-child(1) > div:nth-child(2)
+{
+    padding-bottom:50px;
+}
+
+#root > div:nth-child(1) > div > div > div > div > section.css-1lcbmhc.e1fqkh3o0 > div.css-1l02zno.e1fqkh3o1 > div.block-container.css-1dnb06j.eknhn3m2 > div:nth-child(1) > div:nth-child(1)
+
+{
+    padding-bottom:50px;
 }
 /* title */
 .css-h2raq8>h2{
@@ -22,31 +49,18 @@
 /* sidebar width reduce */
 .css-1l02zno{
     color: black;
-    background-color: #2e7bcf;
-    width: 15rem;
+    background-color: blue;
+    width: 17rem;
 }
 /* Main page */
 .reportview-container {
         background: solid white;
     }
-
 img {
   position: absolute;
   left: -200px;
   top: -100px;
   width: 200px;
   height: 150px;
+    padding-top: 10px;
 }
-
-/* .css-145kmo2{
-    color: white;
-} */
-
-/* .css-1d0tddh{
-    color: white;
-} */
-
-/* .css-1lcbmhc{
-    width: 100px;
-    height: 100px;
-} */
